tests/NormalTests/paczka1/fuzzy1/49392685.err
Error in line 7: NrKcrHmZR A941 49,8
Error in line 15: ERAqGoafpJL A638 9,7
Error in line 24: ERAqGoafpJL A53 -1,7
Error in line 17: ppV A638 27,6
Error in line 25: ppV A53 28,1
Error in line 28: S521 A53 28,3
Error in line 23: ERAqGoafpJL A53 5,2
Error in line 26: XsBkF7pfJ A638 90,3
Error in line 30: S521 A638 49,7
